set overflow hidden on body to correct slick bug

--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -1,13 +1,20 @@
 body {
+    overflow: hidden;
+    
     @media screen and (max-width: 900px) {
         padding: 0 0 10px 0;
         
+        
         .slide-wrap {
             
-            max-width: 500px;
+            
             
             .slide {
                 
+                
+                &.test {
+                    background: #ff0000;
+                }
             }
         }
         
